src/objects/S360_Form_Config__c.object
<CustomObject>
    <fields>
        <fullName>AutoSave_Interval__c</fullName>
        <defaultValue>10</defaultValue>
        <label>AutoSave Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoSave__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AutoSave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Css__c</fullName>
        <label>Custom_Css</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Script__c</fullName>
        <label>Custom_Script</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>collections of fields used by this form</description>
        <label>Field</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <description>Text Area to hold the JSON to format the Form</description>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Object__c</fullName>
        <description>Primary Object API Name</description>
        <label>Primary Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Form Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component_Type__c</columns>
        <columns>Primary_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>